--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "bootstrap": "^4.3.1",
+    "moment": "^2.24.0",
     "react": "^16.7.0",
+    "react-bootstrap": "^1.0.0-beta.5",
     "react-dom": "^16.7.0",
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
@@ -30,6 +33,8 @@
   ],
   "devDependencies": {
     "@storybook/react": "^4.1.11",
-    "redux-devtools": "^3.5.0"
+    "node-sass": "^4.11.0",
+    "redux-devtools": "^3.5.0",
+    "sass-loader": "^7.1.0"
   }
 }
